--- a/2021-1/beamer/C05_md1.tex
+++ b/2021-1/beamer/C05_md1.tex
@@ -455,7 +455,7 @@ Por (HI), $d$ y $e$ son productos de primos,  es decir
 \end{align*}\vskip -.6cm
 donde $p_i, q_i$ son primos.\pause Luego
 \begin{equation*}
-    k +1 = p \cdot q = p_1\cdot p_2 \cdots p_r \cdot q_1\cdot q_2 \cdots q_s. 
+    k +1 = d \cdot e = p_1\cdot p_2 \cdots p_r \cdot q_1\cdot q_2 \cdots q_s. 
 \end{equation*}
 \vskip .4cm
 \pause
