--- a/2021-1/tareas/tarea_03.tex
+++ b/2021-1/tareas/tarea_03.tex
@@ -110,7 +110,7 @@
 
 \newcommand{\tarea}[1]{
 	\begin{center}
-		{\Large Matemática Discreta I - 2020/1} \vskip.4cm
+		{\Large Matemática Discreta I - 2021/1} \vskip.4cm
 		{\Large Tarea #1}\vskip .4cm
 \end{center}}
 
@@ -142,10 +142,9 @@
 \tarea{3}
 
 \begin{ejercicio}
-	En este ejercicio decimos que una \textit{palabra} es una sucesión de letras (tenga sentido o no).
 	\begin{enumerate}
-		\item[1.]  (50 pts) ¿Cuántas palabras de 4 letras o  menos se pueden hacer con un alfabeto de 26 letras?
-		\item[2.] (50 pts) ¿De cuántas formas pueden ordenarse las letras de la palabra\newline PREPOTENTE?
+		\item[1.]  (50 pts) En un colectivo hay 10 asientos vacíos ¿De cuántas formas pueden sentarse 6 personas en los 10 asientos vacíos?
+		\item[2.] (50 pts) ¿De cuántas formas pueden ordenarse las letras de la palabra\newline PRIMERAMENTE?
 	\end{enumerate}
 \end{ejercicio}
 	
