--- a/2021-1/beamer/C09_md1.tex
+++ b/2021-1/beamer/C09_md1.tex
@@ -1,6 +1,7 @@
 %\documentclass{beamer} 
 \documentclass[handout]{beamer} % sin pausas
 \usetheme{CambridgeUS}
+%\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
 
 \usepackage{etex}
 \usepackage{t1enc}
@@ -42,7 +43,6 @@
 }
 \renewcommand\labelitemi{$\circ$}
 \setlist[enumerate]{label={(\arabic*)}}
-%\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
 \setbeamertemplate{itemize item}{$\circ$}
 \setbeamertemplate{enumerate items}[default]
 \definecolor{links}{HTML}{2A1B81}
@@ -114,10 +114,10 @@
 		(a+b)^2 = a^2 +2ab +b^2, \qquad (a+b)^3 = a^3 + 3 a^2b +3ab^2 +
 		b^3.
 		$$
-		\vskip .4cm
+		\vskip .4cm\pause
 		A veces nos piden desarrollar la formula para $(a+b)^4$ y
 		potencias mayores de $a+b$. 
-		\vskip .4cm
+		\vskip .4cm\pause
 		El resultado general que da una formula para $(a+b)^n$ es conocido como el
 		{\it {teorema del binomio}} o {\it binomio de Newton}.  
 		\vskip .4cm
@@ -132,7 +132,7 @@
 		{\it
 			Sea $n$ un entero positivo. El coeficiente del termino
 			$a^{n-r}b^r$ en el desarrollo de $(a+b)^n$ es el número binomial
-			$\binom{n}{r}$. Explícitamente, tenemos
+			$\binom{n}{r}$.\pause Explícitamente, tenemos
 			$$
 			(a+b)^n= \binom{n}{0} a^n + \binom{n}{1} a^{n-1}b+ \binom{n}{2}
 			a^{n-2}b^2 + \cdots + \binom{n}{n} b^n.$$
@@ -153,12 +153,12 @@
 		
 		{\color{blue}Observación}
 		\vskip .2cm
-		Los coeficientes binomiales que intervienen en la fórmula de $(a+b)^n$ forman una fila del triángulo de Pascal:
+		Los coeficientes binomiales que intervienen en la fórmula de $(a+b)^n$ forman una fila del triángulo de Pascal:\pause
 		\begin{align*}
 			&\binom{n}{0}&&\binom{n}{1}& \binom{n}{2} && &\cdots && &\binom{n}{n-2}&&&\binom{n}{n-1}&&\binom{n}{n}& && 
 		\end{align*}
 		
-		\vskip .4cm
+		\vskip .4cm\pause
 		{\color{blue}Ejemplo}
 		\begin{align*}
 			(a+ b)^4 &= \binom{4}{0} a^4 + \binom{4}{1} a^{3}b+ \binom{4}{2} a^{2}b^2 + \binom{4}{3} ab^3 + \binom{4}{4} b^4 \\
@@ -170,7 +170,7 @@
 	
 	\begin{frame}
 		El teorema del binomio puede usarse para deducir identidades en
-		que estén involucrados los números binomiales.
+		que estén involucrados los números binomiales.\pause
 		
 		\vskip .4cm
 		{\color{blue}Ejemplo}
@@ -181,14 +181,14 @@
 		\end{equation*}
 		
 		\vskip .2cm\pause 
-		{\color{blue}Demostración.}
+		{\color{blue}Demostración.}\pause
 		
 		\vskip .2cm
 		Observemos que $2^n = (1 + 1)^n$. Por el  teorema del binomio sabemos que 
 		\begin{align*}
 			(1+1)^n &= \binom{n}{0} 1^n + \binom{n}{1} 1^{n-1}1+ \binom{n}{2}
 			1^{n-2}1^2 + \cdots + \binom{n}{n} 1^n \\
-			&= \binom{n}{0}  + \binom{n}{1} + \binom{n}{2}+ \cdots + \binom{n}{n}. 
+			&= \binom{n}{0}  + \binom{n}{1} + \binom{n}{2}+ \cdots + \binom{n}{n}. \qed
 		\end{align*}
 		
 	\end{frame}
@@ -209,7 +209,7 @@
 		
 		\vskip .2cm 
 		\pause
-		{\color{blue}2.} Los subconjuntos de un conjuntos son los subconjuntos de 0  elementos, unión los subconjuntos de $1$ elemento, unión los subconjuntos de $2$ elementos, unión los subconjuntos de $3$ elementos, etc.
+		{\color{blue}2.} Los subconjuntos de un conjunto son los subconjuntos de 0  elementos, unión los subconjuntos de $1$ elemento, unión los subconjuntos de $2$ elementos, unión los subconjuntos de $3$ elementos, etc.
 		
 		\vskip .2cm 
 		\pause
@@ -224,7 +224,7 @@
 		\vskip .2cm
 		¿Cuántos números naturales existen menores que $10^5$, cuyos dígitos sean todos distintos?
 		\vskip .2cm \pause
-		{\color{blue}Solución.}
+		{\color{blue}Solución.}\pause
 		\vskip .2cm
 		Los números naturales menores de $10^5$ son todos aquellos que tienen como máximo 5 dígitos.
 		\pause
@@ -236,7 +236,7 @@
 			\item[5.] 5 dígitos $\to$ $9 \times 9 \times  8\times  7\times 6$ posibilidades (27216),
 		\end{enumerate} 
 		\vskip .2cm
-		\textbf{Total:} $9 +81+ 648+4536+27216 = 32490$.
+		\textbf{Total:} $9 +81+ 648+4536+27216 = 32490$.\qed
 	\end{frame}
 	
 	
@@ -247,14 +247,15 @@
 		\vskip .2cm
 		Extrayendo 5 cartas de una baraja de 40 cartas ¿cuántos resultados diferentes pueden obtenerse? (no importa el orden)
 		\vskip .2cm \pause
-		{\color{blue}Solución.}
+		{\color{blue}Solución.}\pause
 		\vskip .2cm
-		Las cuarenta caretas son diferents y no nos importa el orden en que recibimos las cartas. 
+		Las cuarenta caretas son diferentes y no nos importa el orden en que recibimos las cartas. 
 		\vskip .2cm
-		El problema es entonces elegir 5 entre cuarenta, por lo tanto la respuesta es
+		El problema es entonces elegir 5 entre 40, por lo tanto la respuesta es
 		\begin{equation*}
 			\binom{40}{5}.
 		\end{equation*}
+        \qed
 		\vskip 2cm
 		
 	\end{frame}
@@ -285,7 +286,7 @@
 		
 		\begin{equation*}
 			\binom{10}{5}\binom{5}{3} = \frac{10!}{5!5!}\frac{5!}{2!3!} = \frac{10!}{5!2!3!} .
-		\end{equation*}
+		\end{equation*}\qed
 		\vskip 4cm
 	\end{frame}
 	
@@ -301,7 +302,7 @@
 		¿De cuántas maneras distintas pueden descender los pasajeros? ¿Y con la condición de que dos 
 		pasajeros no bajen en el mismo piso?
 		\vskip .2cm \pause
-		{\color{blue}Solución.}
+		{\color{blue}Solución.}\pause
 		\vskip .3cm
 		Hagamos un poco de  abstracción del problema y pensemos las  posibilidades que tiene 5 personas para ubicarse en 7 lugares: la primera persona tiene 7 posibilidades, la segunda también y así sucesivamente, luego el total de posibilidades es 
 		\begin{equation*}
@@ -320,10 +321,10 @@
 		
 		
 		Si  no estás convencido del razonamiento, lo podemos ver de la siguiente manera: supongamos  que tenemos 5 posiciones (que representan los 5 pasajeros) y  en cada posición podemos poner un número del 1 al 7 (el piso en que baja), entonces la pregunta se reduce a ¿cuántos números de 5 dígitos se pueden formar con los dígitos del 1 al 7?
-		\vskip .2cm 
+		\vskip .2cm \pause
 		Claramente, la respuesta es también $7^5$.
 		
-		\vskip 1cm
+		\vskip 1cm\pause
 		
 		Para la segunda pregunta, simplemente hay que modificar la pregunta anterior ¿cuántos números de 5 dígitos con todos los dígitos diferentes se pueden formar con los dígitos del 1 al 7?
 		\vskip .2cm 
@@ -331,7 +332,7 @@
 		\begin{equation*}
 			7 \times 6 \times 5 \times 4 \times 3 = \frac{7!}{(7-5)!}=\frac{7!}{2!}.
 		\end{equation*}
-		
+		\qed
 		
 	\end{frame}
 	
