--- a/2021-1/practicos/Practico5-soluciones.tex
+++ b/2021-1/practicos/Practico5-soluciones.tex
@@ -51,7 +51,7 @@
 \renewcommand\labelitemi{$\circ$}
 \setlist[enumerate, 1]{label={(\arabic*)}}
 \setlist[enumerate, 2]{label=\emph{\alph*)}}
-
+\setcounter{MaxMatrixCols}{20}
 
 %%% FORMATOS %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \tolerance=10000
@@ -83,7 +83,333 @@
         
 \begin{enumerate}
 \setlength\itemsep{1.1em}
-        
+    
+\item\label{ej-grafos-a-ady} Escribir las listas de adyacencia de los siguientes grafos 
+
+
+\begin{tabular}{ll}
+    ${}^{}$ \qquad &
+\begin{tikzpicture}[scale=1]
+%\SetVertexSimple[Shape=circle, FillColor=white,MinSize=8 pt]
+%\SetVertexNoLabel
+\draw (-1,2) node {(a)};
+\Vertex[ L=$A$]{A}
+\Vertex[x=1.5,y=0, L=$B$]{B}
+\Vertex[x=3,y=0, L=$C$]{C}
+\Vertex[x=1.5,y=1.5, L=$D$]{D}
+\Vertex[x=1.5,y=-1.5, L=$E$]{E}
+%
+\Edges(A,D,C,E,A)
+\Edges(A,B,C)
+\Edges(D,B)
+\draw (3.5,2) node {(b)};
+\Vertex[x=4.5,y=0.5]{2}
+\Vertex[x=6,y=0.5]{3}
+\Vertex[x=7.5,y=0.5]{4}
+\Vertex[x=4.5,y=-1]{5}
+\Vertex[x=6,y=-1]{6}
+\Edge[style={bend left}](2)(4)
+\Edges(2,3,4,6,5,2)
+\Edges(4,3,6)
+\end{tikzpicture}
+\end{tabular}
+
+
+
+\begin{tabular}{ll}
+    ${}^{}$ \qquad &
+    \begin{tikzpicture}[scale=1]
+    %\SetVertexSimple[Shape=circle, FillColor=white,MinSize=8 pt]
+    %\SetVertexNoLabel
+    \draw (-1,2) node {(c)};
+    \Vertex[x=0,y=0, L=$A$]{A}
+    \Vertex[x=1.5,y=0.8, L=$B$]{B}
+    \Vertex[x=3,y=0, L=$C$]{C}
+    \Vertex[x=1.5,y=-0.8, L=$D$]{D}
+    \Vertex[x=0,y=-0.8, L=$E$]{E}
+    \Vertex[x=1.5,y=0, L=$F$]{F}
+    \Vertex[x=3,y=-0.8, L=$G$]{G}
+    \Vertex[x=1.5,y=-1.6, L=$H$]{H}
+    %
+    \Edges(A,B,C,D,A)
+    \Edges(E,F,G,H,E)
+    \Edges(A,E)
+    \Edges(B,F)
+    \Edges(C,G)
+    \Edges(D,H)
+
+    \draw (3.5,2) node {(d)};
+    \Vertex[x=4.5,y=0]{1}
+    \Vertex[x=5.5,y=0]{2}
+    \Vertex[x=6.5,y=0]{3}
+    \Vertex[x=7.5,y=0]{4}
+    \Vertex[x=4.5,y=-1]{5}
+    \Vertex[x=5.5,y=-1]{6}
+    \Vertex[x=6.5,y=-1]{7}
+    \Vertex[x=7.5,y=-1]{8}
+    \Edge[style={bend left}](1)(4)
+    \Edges(1,2,3,4,8,7,6,5,1)
+    \Edges(2,6,7,3)
+    \Edge[style={bend right}](5)(8)
+    \end{tikzpicture}
+\end{tabular}
+
+\vskip .4cm
+
+\rta
+\vskip .4cm
+\begin{align*}
+    &\text{(a)}&&\begin{matrix}
+            A&B&C&D&E \\\hline
+            D&A&B&A&A \\
+            E&C&D&B&C \\
+             &D&E&C& \\
+            &&&&
+        \end{matrix}&
+    &\text{(b)}&& \begin{matrix}
+         2& 3& 4& 5& 6\\ \hline
+         3& 2& 2& 2& 3\\
+         4& 4& 3& 6&4 \\
+         5& 6& 6& &5\\
+         & & & & 
+        \end{matrix}
+\\[0.8cm]
+    &\text{(c)}&&\begin{matrix}
+        A& B& C& D& E& F& G& H\\ \hline
+        B& A& B& A& A& B& C& E\\
+        D& C& D& C& F& E& F& D\\
+        E& F& G& H& H& G& H& G\\
+        & & & & & & & 
+    \end{matrix}&
+    &\text{(d)}&&\begin{matrix}
+        1& 2& 3& 4& 5& 6& 7& 8\\ \hline
+        2& 1& 2& 1& 1& 2& 3& 4\\
+        4& 3& 4& 3& 6& 5& 6& 5\\
+        5& 6& 7& 8& 8& 7& 8&  7\\
+         & & & &&&& 
+       \end{matrix}       
+\end{align*}
+
+\newpage
+
+\item\label{ej-ady-a-grafos} Dibujar los grafos correspondientes a las siguientes listas de adyacencias. 
+
+\begin{align*}
+    &\text{(a)}&&\begin{matrix}
+        a&b&c&d&e \\\hline
+        b&a&b&a&a \\
+        e&e&e&e&b \\
+        d&c&d&c&c \\
+        &&&&d
+        \end{matrix}&
+    &\text{(b)}&& \begin{matrix}
+         1& 2& 3& 4& 5\\ \hline
+         2& 1& 1& 1& 1\\
+         3& 3& 2& 2& \\
+         4& 4& 4& 3&\\
+         5& & & & 
+        \end{matrix}
+\\[0.3cm]
+    &\text{(c)}&&\begin{matrix}
+        1& 2& 3& 4& 5& 6& 7& 8\\ \hline
+        6& 3& 2& 5& 4& 1& 1& 6\\
+        7& 7& & 6& & 4& 2& 7\\
+        & & & & & 8& 8& \\
+        & & & & & & & 
+    \end{matrix}&
+    &\text{(d)}&&\begin{matrix}
+        1& 2& 3& 4& 5\\ \hline
+        2& 1& 1& 1& 1\\
+        3& 3& 2& 2& 4\\
+        4& 4& 4& 3& \\
+        5& & & 5& 
+       \end{matrix}       
+\\[0.3cm]
+    &\text{(e)}&&\begin{matrix}
+        a& b& c& d& e\\ \hline
+        b& a& b& a& a\\
+        d& c& d& c& c\\
+        e& & e& & \\
+       \end{matrix}&
+    &\text{(f)}&&\begin{matrix}
+        a& b& c& d& e\\ \hline
+        b& a& b& a& a\\
+        d& c& e& e& c\\
+        e& & & & d\\
+       \end{matrix}
+\end{align*}
+
+\begin{align*}
+    &\text{(g)}&&\begin{matrix}
+        1& 2& 3& 4& 5& 6& 7& 8& 9& 10& 11& 12\\ \hline
+        6& 4& 7& 2& 2& 1& 3& 3& 1& 8& 7& 6\\
+        9& 5& 8& & & 9& 11& 10& 12& 11& 10& 9\\
+        & & & & & 12& & & & & &
+       \end{matrix}
+\end{align*}
+\vskip .4cm
+\rta 
+\vskip .4cm
+\begin{tikzpicture}[scale=0.8]
+    %\SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
+    
+    \draw (-0.8,0.2) node {(a)};
+    \Vertex[x=0,y=-1.5, L=$a$]{A} %\draw (-0.50,-1.5) node {$a$};
+    \Vertex[x=1.5,y=0, L=$b$]{B}  %\draw (1,0) node {$b$};
+    \Vertex[x=3,y=-1.5, L=$c$]{C}
+    \Vertex[x=1.5,y=-3, L=$d$]{D}
+    \Vertex[x=1.5,y=-1.5, L=$e$]{E}
+    \Edges(A,B,C,D,A)
+    \Edges(A,E,C)
+    \Edges(B,E,D)
+    
+    \draw (4.2,0.2) node {(b)};
+    \Vertex[x=5,y=-1.5]{1}
+    \Vertex[x=6.5,y=0]{2}
+    \Vertex[x=8.5,y=-1.5]{3}
+    \Vertex[x=5.7,y=-2.5]{4}
+    \Vertex[x=7.7,y=-2.7]{5}
+    \Edges(1,2,3,4,1,5)
+    \Edges(1,3)
+    \Edges(2,4)
+    
+    \draw (10,0.2) node {(c)};
+    \Vertex[x=12.8,y=0]{1}
+    \Vertex[x=11.8,y=-1.2]{2}
+    \Vertex[x=3+10.8,y=-1.2]{3}
+    \Vertex[x=0+10.8,y=-2.4]{4}
+    \Vertex[x=4+10.8,y=-2.4]{5}
+    \Vertex[x=1+10.8,y=-3.6]{6}
+    \Vertex[x=3+10.8,y=-3.6]{7}
+    \Vertex[x=2+10.8,y=-3.8]{8}
+    \Edges(1,6,8,7,1)
+    \Edges(3,2,7,8,6,4,5)
+    \end{tikzpicture} 
+    
+    \begin{tikzpicture}[scale=0.8]
+    \draw (-0.8,-5.5) node {(d)};
+    \Vertex[x=0+0.2,y=0-5.9]{1}
+    \Vertex[x=3+0.2,y=0-5.9]{2}
+    \Vertex[x=3+0.2,y=-3-5.9]{3}
+    \Vertex[x=1.5+0.2,y=-3-5.9]{4}
+    \Vertex[x=0+0.2,y=-3-5.9]{5}
+    \Edges(1,2,3,4,5,1)
+    \Edges(2,4,1,3)
+    
+    \draw (4.2,-5.3) node {(e)};
+    \Vertex[x=0+5,y=-1.5-5.9, L=$a$]{A}
+    \Vertex[x=1.5+5,y=0-5.9, L=$b$]{B}
+    \Vertex[x=3+5,y=-1.5-5.9, L=$c$]{C}
+    \Vertex[x=1.5+5,y=-3-5.9, L=$d$]{D}
+    \Vertex[x=1.5+5,y=-1.5-5.9, L=$e$]{E}
+    \Edges(A,B,C,D,A)
+    \Edges(A,E,C)
+    
+    
+    \draw (10,-5.3) node {(f)};
+    \Vertex[x=0+5+5.8,y=-1.5-5.9, L=$a$]{A}
+    \Vertex[x=1.5+5+5.8,y=0-5.9, L=$b$]{B}
+    \Vertex[x=3+5+5.8,y=-1.5-5.9, L=$c$]{C}
+    \Vertex[x=1.5+5+5.8,y=-3-5.9, L=$d$]{D}
+    \Vertex[x=1.5+5+5.8,y=-1.5-5.9, L=$e$]{E}
+    \Edges(A,B,C,E,A,D,E)
+    \end{tikzpicture} 
+    
+    \begin{tikzpicture}[scale=0.7]
+    \draw (-0.8,-10) node {(g)};
+    \Vertex[x=2,y=-11]{1}
+    \Vertex[x=4,y=-11]{2}
+    \Vertex[x=6,y=-11]{3}
+    \Vertex[x=0,y=-13]{4}
+    \Vertex[x=5,y=-14]{5}
+    \Vertex[x=6.3,y=-13]{6}
+    \Vertex[x=2,y=-15]{7}
+    \Vertex[x=8,y=-15]{8}
+    \Vertex[x=3,y=-16]{9}
+    \Vertex[x=7,y=-16]{10}
+    \Vertex[x=3,y=-18]{11}
+    \Vertex[x=5,y=-18]{12}
+    \Edges(1,6,12,9,1)
+    \Edges(4,2,5)
+    \Edges(3,7,11,10,8,3)
+    \end{tikzpicture} 
+    
+    \item Determinar la valencia máxima y la valencia mínima de cada grafo del ejercicio \ref{ej-grafos-a-ady}. Decir cual grafo es regular. 
+    
+    \rta 
+
+    (a) máxima $3$, mínima $2$, no regular..
+
+    (b) máxima $3$, mínima $2$, no regular..
+    
+    (c) máxima $3$, mínima $3$, regular.
+    
+    (d) máxima $3$, mínima $3$, regular.
+    
+    \item   Escribir la lista de valencias de cada grafo del ejercicio \ref{ej-ady-a-grafos}. Es decir escribir todos los valores que toman las valencias en cada grafo (sin repetir).
+
+    \rta 
+
+    (a) $3$, $4$.
+
+    (b)  $1$, $3$, $4$.
+
+    (c) $1$, $2$, $3$.
+
+    (d) $2$, $3$, $4$.
+
+    (e)  $2$, $3$.
+
+    (f) $2$, $3$.
+
+    (g)  $1$, $2$, $3$.
+
+    \item Un  {\em grafo planar} es un grafo para el que  \textit{existe} un dibujo del grafo en el plano tal que no hay ningún cruce de aristas. Por ejemplo, los grafos (a), (b) y (d) del ejercicio \ref{ej-grafos-a-ady} son planares. 
+
+    Un  grafo planar divide al plano en \textit{regiones} delimitadas por aristas, por ejemplo el grafo (a) del ejercicio  \ref{ej-grafos-a-ady} determina $4$ regiones: 
+    \begin{itemize}
+        \item la delimitada por las aristas $AB$, $BD$ y $DA$,
+        \item la delimitada por  $BC$, $CD$ y $DB$,
+        \item  la delimitada por  $AB$, $BC$, $CE$ y $EA$, y 
+        \item la región exterior.
+    \end{itemize}
+    Para todo grafo planar vale el famoso \textit{teorema de Euler para poliedros} que dice 
+    \begin{equation}\label{formula-de-euler}
+        C + V - A = 2, \tag{*}
+    \end{equation}
+    donde $C$ es el número de regiones (en el caso de poliedros, caras), $A$ es el número de aristas y $V$ es el número de vértices.
+    
+    Comprobar que los grafos (a), (b) y (d) del ejercicio  \ref{ej-grafos-a-ady} satisfacen la fórmula \eqref{formula-de-euler}. 
+
+    \rta Denotamos $V$ la cantidad de vértices, $A$ la cantidad de aristas  y $C$ la cantidad de regiones. 
+
+    (a) $V = 5$, $A=7$, $C = 4$, luego $C+V-A= 4 + 5 - 7 =2$.
+
+    (b) $V = 5$, $A=7$, $C = 4$, luego $C+V-A= 4 + 5 - 7 =2$.
+
+    (d) $V = 8$, $A=12$, $C = 6$, luego $C+V-A= 6 + 8  - 12 =2$.
+
+    \item Demostrar que el grafo (d) del ejercicio \ref{ej-ady-a-grafos} es planar y comprobar la fórmula de Euler.
+    
+    \rta Recordemos que un grafo es planar si se \textit{puede dibujar} sin cruces de aristas. Claramente el grafo en cuestión se puede dibujar también de la siguiente forma
+
+    \begin{tikzpicture}[scale=0.8]
+        \Vertex[x=0+0.2,y=0-5.9]{1}
+        \Vertex[x=2+0.2,y=0-5.9]{2}
+        \Vertex[x=4+0.2,y=-3-5.9]{3}
+        \Vertex[x=1.5+0.2,y=-3-5.9]{4}
+        \Vertex[x=0+0.2,y=-3-5.9]{5}
+        \Edges(1,2,3,4,5,1)
+        \Edges(2,4,1)
+        \Edge[style={bend left=90}](1)(3)
+    \end{tikzpicture}
+
+    \noindent que es un grafo planar. 
+    
+    En  este caso $V = 5$, $A=8$, $C = 5$, luego $C+V-A= 5 + 5  - 8 =2$.
+
+
+
     \item \label{ej-kn} ¿Cuántas aristas tiene el  grafo completo $K_n$? ¿Para cuáles valores de $n$ se puede encontrar un dibujo de $K_n$ con la propiedad que las líneas representan las aristas sin cruzarse?
     
     \rta En un grafo  completo de $n$ vértices podemos contar las aristas de la siguiente manera: del primer vértice salen $n-1$ aristas, del segundo salen $n-2$ pues no debemos contar la arista al primer vértice, del tercer vértice salen $n-3$ aristas (no contamos la que van al primero y al segundo), y así sucesivamente. Concluyendo, la cantidad de aristas es 
@@ -131,7 +457,7 @@
     Podemos dibujar el primer grafo y  el segundo  grafo de la siguiente forma
     \vskip .3cm
     \begin{tabular}{ccc}
-        \begin{tikzpicture}[every node/.style={draw,circle},scale=0.5]
+        \begin{tikzpicture}[every node/.style={draw,circle},scale=1]
         \SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
         \graph[clockwise, radius=3cm] {subgraph C_n [n=5,name=A,V={$a$,$b$,$c$,$d$,$e$}]};
         \graph[clockwise, radius=1.5cm] {subgraph I_n [n=5,name=B,V={$f$,$g$,$h$,$i$,$j$}]};
