--- a/2021-1/practicos/Practico5.tex
+++ b/2021-1/practicos/Practico5.tex
@@ -49,7 +49,7 @@
 \renewcommand\labelitemi{$\circ$}
 \setlist[enumerate, 1]{label={(\arabic*)}}
 \setlist[enumerate, 2]{label=\emph{\alph*)}}
-
+\setcounter{MaxMatrixCols}{20}
 
 %%% FORMATOS %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \tolerance=10000
@@ -84,6 +84,155 @@
 
 \begin{enumerate}
 \setlength\itemsep{1.1em}
+
+\item\label{ej-grafos-a-ady} Escribir las listas de adyacencia de los siguientes grafos 
+
+\begin{tabular}{ll}
+    ${}^{}$ \qquad &
+\begin{tikzpicture}[scale=1]
+%\SetVertexSimple[Shape=circle, FillColor=white,MinSize=8 pt]
+%\SetVertexNoLabel
+\draw (-1,2) node {(a)};
+\Vertex[ L=$A$]{A}
+\Vertex[x=1.5,y=0, L=$B$]{B}
+\Vertex[x=3,y=0, L=$C$]{C}
+\Vertex[x=1.5,y=1.5, L=$D$]{D}
+\Vertex[x=1.5,y=-1.5, L=$E$]{E}
+%
+\Edges(A,D,C,E,A)
+\Edges(A,B,C)
+\Edges(D,B)
+\draw (3.5,2) node {(b)};
+\Vertex[x=4.5,y=0.5]{2}
+\Vertex[x=6,y=0.5]{3}
+\Vertex[x=7.5,y=0.5]{4}
+\Vertex[x=4.5,y=-1]{5}
+\Vertex[x=6,y=-1]{6}
+\Edge[style={bend left}](2)(4)
+\Edges(2,3,4,6,5,2)
+\Edges(4,3,6)
+\end{tikzpicture}
+\end{tabular}
+
+
+
+\begin{tabular}{ll}
+    ${}^{}$ \qquad &
+    \begin{tikzpicture}[scale=1]
+    %\SetVertexSimple[Shape=circle, FillColor=white,MinSize=8 pt]
+    %\SetVertexNoLabel
+    \draw (-1,2) node {(c)};
+    \Vertex[x=0,y=0, L=$A$]{A}
+    \Vertex[x=1.5,y=0.8, L=$B$]{B}
+    \Vertex[x=3,y=0, L=$C$]{C}
+    \Vertex[x=1.5,y=-0.8, L=$D$]{D}
+    \Vertex[x=0,y=-0.8, L=$E$]{E}
+    \Vertex[x=1.5,y=0, L=$F$]{F}
+    \Vertex[x=3,y=-0.8, L=$G$]{G}
+    \Vertex[x=1.5,y=-1.6, L=$H$]{H}
+    %
+    \Edges(A,B,C,D,A)
+    \Edges(E,F,G,H,E)
+    \Edges(A,E)
+    \Edges(B,F)
+    \Edges(C,G)
+    \Edges(D,H)
+
+    \draw (3.5,2) node {(d)};
+    \Vertex[x=4.5,y=0]{1}
+    \Vertex[x=5.5,y=0]{2}
+    \Vertex[x=6.5,y=0]{3}
+    \Vertex[x=7.5,y=0]{4}
+    \Vertex[x=4.5,y=-1]{5}
+    \Vertex[x=5.5,y=-1]{6}
+    \Vertex[x=6.5,y=-1]{7}
+    \Vertex[x=7.5,y=-1]{8}
+    \Edge[style={bend left}](1)(4)
+    \Edges(1,2,3,4,8,7,6,5,1)
+    \Edges(2,6,7,3)
+    \Edge[style={bend right}](5)(8)
+    \end{tikzpicture}
+\end{tabular}
+
+
+\item\label{ej-ady-a-grafos} Dibujar los grafos correspondientes a las siguientes listas de adyacencias. 
+
+\begin{align*}
+    &\text{(a)}&&\begin{matrix}
+        a&b&c&d&e \\\hline
+        b&a&b&a&a \\
+        e&e&e&e&b \\
+        d&c&d&c&c \\
+        &&&&d
+        \end{matrix}&
+    &\text{(b)}&& \begin{matrix}
+         1& 2& 3& 4& 5\\ \hline
+         2& 1& 1& 1& 1\\
+         3& 3& 2& 2& \\
+         4& 4& 4& 3&\\
+         & & & & 
+        \end{matrix}
+\\[0.3cm]
+    &\text{(c)}&&\begin{matrix}
+        1& 2& 3& 4& 5& 6& 7& 8\\ \hline
+        6& 3& 2& 5& 4& 1& 1& 6\\
+        7& 7& & 6& & 4& 2& 7\\
+        & & & & & 8& 8& \\
+        & & & & & & & 
+    \end{matrix}&
+    &\text{(d)}&&\begin{matrix}
+        1& 2& 3& 4& 5\\ \hline
+        2& 1& 1& 1& 1\\
+        3& 3& 2& 2& 4\\
+        4& 4& 4& 3& \\
+        5& & & 5& 
+       \end{matrix}       
+\\[0.3cm]
+    &\text{(e)}&&\begin{matrix}
+        a& b& c& d& e\\ \hline
+        b& a& b& a& a\\
+        d& c& d& c& c\\
+        & & & & \\
+       \end{matrix}&
+    &\text{(f)}&&\begin{matrix}
+        a& b& c& d& e\\ \hline
+        b& a& b& a& a\\
+        d& c& e& e& c\\
+        & & & & d\\
+       \end{matrix}
+\end{align*}
+
+\begin{align*}
+    &\text{(g)}&&\begin{matrix}
+        1& 2& 3& 4& 5& 6& 7& 8& 9& 10& 11& 12\\ \hline
+        6& 4& 7& 2& 2& 1& 3& 3& 1& 8& 7& 6\\
+        9& 5& 8& & & 9& 11& 10& 12& 11& 10& 9\\
+        & & & & & 12& & & & & &
+       \end{matrix}
+\end{align*}
+
+\item Determinar la valencia máxima y la valencia mínima de cada grafo del ejercicio \ref{ej-grafos-a-ady}. Decir cual grafo es regular. 
+    
+\item   Escribir la lista de valencias de cada grafo del ejercicio \ref{ej-ady-a-grafos}. Es decir escribir todos los valores que toman las valencias en cada grafo (sin repetir).
+
+\item Un  {\em grafo planar} es un grafo para el que  \textit{existe} un dibujo del grafo en el plano tal que no hay ningún cruce de aristas. Por ejemplo, los grafos (a), (b) y (d) del ejercicio \ref{ej-grafos-a-ady} son planares. 
+
+Un  grafo planar divide al plano en \textit{regiones} delimitadas por aristas, por ejemplo el grafo (a) del ejercicio  \ref{ej-grafos-a-ady} determina $4$ regiones: 
+\begin{itemize}
+    \item la delimitada por las aristas $AB$, $BD$ y $DA$,
+    \item la delimitada por  $BC$, $CD$ y $DB$,
+    \item  la delimitada por  $AB$, $BC$, $CE$ y $EA$, y 
+    \item la región exterior.
+\end{itemize}
+Para todo grafo planar vale el famoso \textit{teorema de Euler para poliedros} que dice 
+\begin{equation}\label{formula-de-euler}
+    C + V = A + 2, \tag{*}
+\end{equation}
+donde $C$ es el número de regiones (en el caso de poliedros, caras), $A$ es el número de aristas y $V$ es el número de vértices.
+
+Comprobar que los grafos (a), (b) y (d) del ejercicio  \ref{ej-grafos-a-ady} satisfacen la fórmula \eqref{formula-de-euler}. 
+
+\item Demostrar que el grafo (d) del ejercicio \ref{ej-ady-a-grafos} es planar y comprobar la fórmula de Euler.
 
 \item  ¿Cuántas aristas tiene el  grafo completo $K_n$? ¿Para cuáles valores de $n$ se puede encontrar un dibujo de $K_n$ con la propiedad que las líneas representan las aristas sin cruzarse?
 
